--- a/stepful-api/Gemfile
+++ b/stepful-api/Gemfile
@@ -40,6 +40,7 @@ group :development, :test do
   gem "rubocop-rails-omakase", require: false
 
   gem "rspec-rails", "~> 7.0.0"
+  gem "shoulda-matchers", "~> 6.0"
   gem "factory_bot_rails"
   gem "rswag"
 end
