--- a/stepful-ui/package.json
+++ b/stepful-ui/package.json
@@ -14,8 +14,11 @@
     "@remix-run/node": "^2.11.2",
     "@remix-run/react": "^2.11.2",
     "@remix-run/serve": "^2.11.2",
+    "@types/react-big-calendar": "^1.8.10",
     "isbot": "^4.1.0",
+    "openapi-fetch": "^0.12.0",
     "react": "^18.2.0",
+    "react-big-calendar": "^1.13.4",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
@@ -31,9 +34,10 @@
     "eslint-plugin-jsx-a11y": "^6.7.1",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "openapi-typescript": "^7.4.0",
     "postcss": "^8.4.38",
     "tailwindcss": "^3.4.4",
-    "typescript": "^5.1.6",
+    "typescript": "^5.5.4",
     "vite": "^5.1.0",
     "vite-tsconfig-paths": "^4.2.1"
   },
